updated the registrationtype field to be plural and array
